fixed title breakpoint nowrap

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -90,6 +90,16 @@ ul.orbit-slides-container li {
 }
 
 
+//Home Section
+
+.homesection {
+  min-width: 200px;
+  h1 {
+    white-space: nowrap;
+  }
+}
+
+
 //News Section
 
 #newssect{
@@ -274,11 +284,7 @@ ul.orbit-slides-container li {
 }
 
 
-
-
-
-
-
+/*view ports*/
 
 
 
